<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
    android:title="@string/conn_controller_title">
        <EditTextPreference
            android:key="Connection_Host"
            android:title="@string/ip_title"
            android:summary="@string/ip_sum"
            android:dialogTitle="@string/ip_dialog_title"/>
        <EditTextPreference
            android:key="Connection_Port"
            android:title="@string/port_title"
            android:inputType="number"
            android:summary="@string/port_sum"
            android:dialogTitle="@string/port_dialog_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/data_refresh_title">
        <ListPreference
            android:key="Refresh_Network"
            android:title="@string/network_title"
            android:summary="@string/network_sum"
            android:dialogTitle="@string/network_dialog_title"
            android:entryValues="@array/network_values"
            android:entries="@array/network"/>
        <CheckBoxPreference
            android:key="Refresh_Always"
            android:title="@string/refresh_title"
            android:summary="@string/refresh_sum"/>
        <ListPreference
            android:key="Refresh_Auto_Time"
            android:title="@string/refresh_time_title"
            android:summary="@string/refresh_time_sum"
            android:dialogTitle="@string/refresh_time_dialog_title"
            android:entryValues="@array/refresh_values"
            android:entries="@array/refresh"
            android:dependency="Refresh_Always"
            />
    </PreferenceCategory>
</PreferenceScreen>