<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity" app:showAsAction="ifRoom">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh_actionbar" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_refresh_time"
        android:icon="@drawable/ic_action_refresh_time"
        android:title="@string/Refresh_time_actionbar" app:showAsAction="ifRoom"
        android:actionViewClass="android.widget.Spinner">
        <menu>
            <item android:id="@+id/menu_refresh_0" android:title="@string/Refresh_time_actionbar_off"/>
            <item android:id="@+id/menu_refresh_5" android:title="@string/Refresh_time_actionbar_5"/>
            <item android:id="@+id/menu_refresh_10" android:title="@string/Refresh_time_actionbar_10"/>
            <item android:id="@+id/menu_refresh_20" android:title="@string/Refresh_time_actionbar_20"/>
            <item android:id="@+id/menu_refresh_30" android:title="@string/Refresh_time_actionbar_30"/>
        </menu>
    </item>
</menu>
