<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout1"
    android:background="#EEEEEE">
    <include android:id="@+id/tool_bar" layout="@layout/toolbar"/>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dip"
        card_view:cardCornerRadius="4dp">
        <TableLayout
            android:id="@+id/table_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dip"
            android:stretchColumns="1">
            <TextView
                android:text="@string/container_title_general"
                android:textSize="20sp"
                android:gravity="center" />
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_id"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/ContainerID"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_owner"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/Owner"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_weight_empty"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/WeightE"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_weight_full"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/Weight"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <View
                android:layout_height="3dip"
                android:background="#FF909090"
                android:layout_marginBottom="6dip"/>
            <TextView
                android:text="@string/container_title_content"
                android:textSize="20sp"
                android:gravity="center" />
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_content"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/Content"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_content_type"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/ContentType"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_content_danger"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/ContentDanger"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <View
                android:layout_height="3dip"
                android:background="#FF909090"
                android:layout_marginBottom="6dip"/>
            <TextView
                android:text="@string/container_title_arrival"
                android:gravity="center"
                android:textSize="20sp" />
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/containter_company"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/ArrivalCompany"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_date"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/ArrivalDate"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_transport"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/ArrivalTransport"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <View
                android:layout_height="3dip"
                android:background="#FF909090"
                android:layout_marginBottom="6dip"/>
            <TextView
                android:text="@string/container_title_department"
                android:gravity="center"
                android:textSize="20sp" />
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/containter_company"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/DepartmentCompany"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_date"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/DepartmentDate"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/container_transport"
                    android:padding="5dip"/>
                <TextView
                    android:id="@+id/DepartmentTransport"
                    android:gravity="end"
                    android:padding="5dip"/>
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>